fixed whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -400,3 +400,9 @@
 .imgDetailPage {
   width: 100%;
 }
+
+
+#bootstrap-overrides .row {
+  --bs-gutter-x: 0;
+
+}
